Fixed vertical alignment for icons in dropdown and icons in navbar next to user and language.

--- a/app/assets/stylesheets/material_icons.css.less
+++ b/app/assets/stylesheets/material_icons.css.less
@@ -75,8 +75,13 @@
 
 .dropdown-menu .mdi::before {
   position: relative;
-  top: 4px;
+  top: 2px;
   left: -8px;
+}
+
+.dodona-navbar .dropdown-toggle .mdi::before {
+  vertical-align: text-bottom;
+  line-height: 28px;
 }
 
 .nav .mdi::before {
